@@ -2,13 +2,14 @@ package org.myorg.http;
 
 import java.io.IOException;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 public class DefaultHttpCaller implements HttpCaller {
     @Override
     public HttpResponse get(String url) {
         try {
-            HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
+            HttpURLConnection connection = (HttpURLConnection) new URI(url).toURL().openConnection();
             connection.setConnectTimeout(5000);
             connection.setRequestMethod("GET");
             connection.connect();
@@ -18,6 +19,8 @@ public class DefaultHttpCaller implements HttpCaller {
             return new HttpResponse(code, message);
         } catch (IOException e) {
             throw new HttpCallException(String.format("Failed to call URL '%s' via HTTP GET", url), e);
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
         }
     }
 }
